--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.344.0",
